--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "mysql": "^2.15.0",
+    "swagger-ui-express": "^2.0.15",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
